[package]
name = "qmk-xap-gui"
version = "0.0.0"
description = "QMK XAP client"
authors = ["Stefan Kerkmann"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
anyhow = "1.0"
binrw = "0.13.3"
bitflags = "1.3"
crossbeam-channel = "0.5"
deser-hjson = "2.2.0"
env_logger = "0.11.0"
flate2 = "1.0"
hidapi = { version = "2.2", features = ["macos-shared-device"] }
log = "0.4"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.3.0"
specta = { version = "=2.0.0-rc.7", features = ["uuid"] }
tauri = { version = "1.5.4", features = ["api-all"] }
tauri-specta = { version = "=2.0.0-rc.4", features = [
    "javascript",
    "typescript",
] }
thiserror = "1.0"
uuid = { version = "1.3", features = ["serde", "v4"] }
xap-specs = { path = "../xap-specs" }

[dev-dependencies]
similar-asserts = "1.5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
