[package]
name = "qmk-xap-gui"
version = "0.0.0"
description = "QMK XAP client"
authors = ["Stefan Kerkmann"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
anyhow = "1.0"
binrw = "0.13"
bitflags = { version = "2.5.0", features = ["serde"] }
crossbeam-channel = "0.5"
deser-hjson = "2.2"
env_logger = "0.11"
flate2 = "1.0"
hidapi = { version = "2.6", features = ["macos-shared-device"] }
log = "0.4"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.6"
specta = { version = "=2.0.0-rc.7", features = ["uuid"] }
tauri = { version = "1.6.1", features = ["api-all"] }
tauri-specta = { git = "https://github.com/oscartbeaumont/tauri-specta.git", branch = "main", commit = "4e48b7b378ce89590a9e9befe29a83b0cd4b322a", features = [
    "typescript",
] }
thiserror = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }
xap-specs = { path = "../xap-specs" }

[dev-dependencies]
similar-asserts = "1.5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol", "tauri-codegen"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
tauri-codegen = []
