[package]
name = "qmk-xap-gui"
version = "0.0.0"
description = "QMK XAP client"
authors = ["Stefan Kerkmann"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
anyhow = "1.0"
binrw = "0.13"
bitflags = { version = "2.5", features = ["serde"] }
crossbeam-channel = "0.5"
deser-hjson = "2.2"
env_logger = "0.11"
flate2 = "1.0"
hidapi = { version = "2.6", features = ["macos-shared-device"] }
log = "0.4"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.8"
specta = { version = "=2.0.0-rc.12", features = ["uuid"] }
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-shell = "2.0.0-beta.5"
# Workaround for compilation error with tauri 2.0.0-beta.17
# See https://github.com/oscartbeaumont/tauri-specta/pull/94
# Remove once the PR or another fix is merged
tauri-specta = { git = "https://github.com/nashaofu/tauri-specta.git", rev = "8eaf3494", features = [
    "typescript",
] }
thiserror = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
xap-specs = { path = "../xap-specs" }

[dev-dependencies]
similar-asserts = "1.5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol", "tauri-codegen"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
tauri-codegen = []
