[package]
name = "xap-wasm"
version = "0.0.0"
description = "QMK XAP client"
authors = ["Stefan Kerkmann"]
license = ""
repository = ""
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]

[dependencies]
anyhow = "1.0"
binrw = "0.13"
bitflags = { version = "2.5", features = ["serde"] }
deser-hjson = "2.2"
env_logger = "0.11"
flate2 = "1.0"
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.8"
uuid = { version = "1.8", features = ["serde", "v4", "js"] }
xap-specs = { path = "../xap-specs" }
serde-wasm-bindgen = "0.6"
tsify = "0.4"
wasm-bindgen = "0.2"

[dev-dependencies]
similar-asserts = "1.5.0"

[features]
