[package]
name = "xap-specs"
version = "0.1.0"
edition = "2021"

[lib]
name = "xap_specs"
path = "src/lib.rs"

[[bin]]
name = "xap-specs-codegen"
path = "src/bin/codegen.rs"

[dependencies]
anyhow = "1.0"
binrw = "0.13"
bitflags = { version = "2.5", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
convert_case = "0.6"
deser-hjson = "2.2"
env_logger = "0.11"
flate2 = "1.0"
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.8"
specta = "=2.0.0-rc.12"
thiserror = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }

[dev-dependencies]
similar-asserts = "1.5"

[build-dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
